#2379: fixed feature icon alignment bug

--- a/R4/Files/Templates/Designs/R4/Assets/_src/scss/1-base/_utilities.scss
+++ b/R4/Files/Templates/Designs/R4/Assets/_src/scss/1-base/_utilities.scss
@@ -66,5 +66,5 @@ button:focus-visible,
 // We need this to removes the default margin bottom set by the rich text editor
 
 .mb-0-last-child > *:last-child {
-	margin-bottom: 0;
+	margin-bottom: 0 !important;
 }
